@@ -60,6 +60,7 @@ public:
     void insertSlice(Slice* elem);
     void removeSlice(Slice* elem);
     void raiseSlice(Slice* slice);
+    void lowerSlice(Slice* slice);
     void sliceAddLayer(Slice* slice, HSLayer layer, bool insertOnTop = true);
     void sliceRemoveLayer(Slice* slice, HSLayer layer);
     bool isLayerEmpty(HSLayer layer);
