@@ -20,6 +20,7 @@ Current git version
   * The setting 'default_frame_layout' now holds an algorithm name.
   * The 'shift' command now moves the window to a neighboured monitor if
     the window cannot be moved within a tag in the desired direction.
+  * New command 'lower' to lower a window in the stack.
   * Bug fixes:
     - Fix mistakenly transparent borders of argb clients
   * New dependency: xrender
